[gd_scene load_steps=5 format=3 uid="uid://dlimqo8igshs3"]

[ext_resource type="Script" path="res://autoload/SoundEffect/SoundEffect.gd" id="1_12ptu"]
[ext_resource type="AudioStream" uid="uid://bykr1yaisabfe" path="res://autoload/SoundEffect/ui/tick-.wav" id="2_bltju"]
[ext_resource type="AudioStream" uid="uid://dlbathqk2uyqy" path="res://autoload/SoundEffect/ui/press-.wav" id="3_g7kf6"]
[ext_resource type="AudioStream" uid="uid://c0gbantbfid7s" path="res://autoload/SoundEffect/ui/press+.wav" id="4_wlvim"]

[node name="SoundEffect" type="Node"]
script = ExtResource("1_12ptu")

[node name="tick0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bltju")

[node name="press0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g7kf6")
bus = &"SFX"

[node name="press1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wlvim")
bus = &"SFX"
